--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <meta name="copyright" content="MACode ID, https://www.macodeid.com/">
   
-  <title>Virtual Folio - Portfolio HTML5 Template</title>
+  <title>Brian Michael</title>
 
   <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
   
@@ -30,7 +30,7 @@
   
   <link rel="stylesheet" type="text/css" href="assets/css/topbar.virtual.css">
 </head>
-<body class="theme-red">
+<body class="theme-purple">
   
   <!-- Back to top button -->
   <div class="btn-back_to_top">
@@ -38,17 +38,17 @@
   </div>
   
   <!-- Setting button -->
-  <div class="config">
+  <!-- <div class="config">
     <div class="template-config">
-      <!-- Settings -->
+      Settings
       <div class="d-block">
         <button class="btn btn-fab btn-sm" id="sideel" title="Settings"><span class="ti-settings"></span></button>
       </div>
-      <!-- Puschase -->
+      Purchase
       <div class="d-block">
         <a href="https://macodeid.com/projects/virtual-folio/" class="btn btn-fab btn-sm" title="Get this template" data-toggle="tooltip" data-placement="left"><span class="ti-download"></span></a>
       </div>
-      <!-- Help -->
+      Help
       <div class="d-block">
         <a href="#" class="btn btn-fab btn-sm" title="Help" data-toggle="tooltip" data-placement="left"><span class="ti-help"></span></a>
       </div>
@@ -70,49 +70,49 @@
         <option value="blog-minibar">Blog (Minibar)</option>
       </select>
     </div>
-  </div>
+  </div> -->
   
-  <div class="vg-page page-home" id="home" style="background-image: url(assets/img/bg_image_1.jpg)">
+  <div class="vg-page page-home" id="home" style="background-image: url(assets/img/summer_camp.jpg)">
     <!-- Navbar -->
-    <div class="navbar navbar-expand-lg navbar-dark sticky" data-offset="500">
+    <div class="navbar navbar-expand-lg navbar-dark sticky" style="background-color: #5a49e3;" data-offset="500">
       <div class="container">
-        <a href="" class="navbar-brand">V-Folio</a>
+        <a href="index.html" class="navbar-brand">Brian Michael</a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#main-navbar" aria-expanded="true">
           <span class="ti-menu"></span>
         </button>
         <div class="collapse navbar-collapse" id="main-navbar">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a href="#home" class="nav-link" data-animate="scrolling">Home</a>
+              <a href="#home" class="nav-link" data-animate="scrolling">Welcome</a>
             </li>
             <li class="nav-item">
-              <a href="#about" class="nav-link" data-animate="scrolling">About</a>
+              <a href="#about" class="nav-link" data-animate="scrolling">About Me</a>
             </li>
             <li class="nav-item">
-              <a href="#portfolio" class="nav-link" data-animate="scrolling">Portfolio</a>
+              <a href="#portfolio" class="nav-link" data-animate="scrolling">Projects</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a href="#blog" class="nav-link" data-animate="scrolling">Blog</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a href="#contact" class="nav-link" data-animate="scrolling">Contact</a>
             </li>
           </ul>
-          <ul class="nav ml-auto">
+          <!-- <ul class="nav ml-auto">
             <li class="nav-item">
               <button class="btn btn-fab btn-theme no-shadow">En</button>
             </li>
-          </ul>
+          </ul> -->
         </div>
       </div>
     </div> <!-- End Navbar -->
     <!-- Caption header -->
     <div class="caption-header text-center wow zoomInDown">
-      <h5 class="fw-normal">Welcome</h5>
-      <h1 class="fw-light mb-4">I'm <b class="fg-theme">Stephen</b> Doe</h1>
-      <div class="badge">UI/UX & Web Designer</div>
+      <h5 class="fw-normal">It's showtime, folks!</h5>
+      <h1 class="fw-light mb-4">Hi, I'm Brian Michael.</h1>
+      <!-- <div class="badge">Game Developer</div> -->
     </div> <!-- End Caption header -->
-    <div class="floating-button"><span class="ti-mouse"></span></div>
+    <!-- <div class="floating-button"><span class="ti-mouse"></span></div> -->
   </div>
   
   <div class="vg-page page-about" id="about">
