--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </div>
   </div> -->
   
-  <div class="vg-page page-home" id="home" style="background-image: url(assets/img/summer_camp.jpg)">
+  <div class="vg-page page-home" id="home" style="background-image: url(assets/img/summer_camp.jpg)" alt="Teaching at Summer Camp">
     <!-- Navbar -->
     <div class="navbar navbar-expand-lg navbar-dark sticky" style="background-color: #5a49e3;" data-offset="500">
       <div class="container">
@@ -120,20 +120,28 @@
       <div class="row">
         <div class="col-lg-4 py-3">
           <div class="img-place wow fadeInUp">
-            <img src="assets/img/person.jpg" alt="">
+            <img src="assets/img/portrait.png" alt="Brian Michael">
           </div>
         </div>
         <div class="col-lg-6 offset-lg-1 wow fadeInRight">
-          <h1 class="fw-light">Stephen Doe</h1>
-          <h5 class="fg-theme mb-3">UI/UX & Web Designer</h5>
-          <p class="text-muted">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form but the majority have suffered alteration in some</p>
-          <ul class="theme-list">
+          <h1 class="fw-light">Brian Michael</h1>
+          <h5 class="fg-theme mb-3">Game Developer</h5>
+          <p class="text-muted">Hello! I'm a game developer. I've been creating games for a couple years now, and I'd have to choose Unity as my engine of choice. I'm currently attending the University of Wisconsin-Whitewater and persuing my Bachelor of Science. I primarily do the programming side of game development.</p>
+          <!-- <ul class="theme-list">
             <li><b>From:</b> Texas, US</li>
             <li><b>Lives In:</b> Texas, US</li>
             <li><b>Age:</b> 25</li>
             <li><b>Gender:</b> Male</li>
-          </ul>
-          <button class="btn btn-theme-outline">Download CV</button>
+          </ul> -->
+          <div style="display: flex; justify-content: space-between; margin-bottom: 20px;">          
+            <img class="skill" src="assets/img/csharp.png" alt="C#">
+            <img class="skill" src="assets/img/cpp.png" alt="C++">
+            <img class="skill" src="assets/img/python.png" alt="Python">
+            <img class="skill" src="assets/img/html.png" alt="HTML">
+            <img class="skill" src="assets/img/javascript.png" alt="JavaScript">
+            <img class="skill" src="assets/img/jquery.png" alt="jQuery">
+          </div>
+          <button class="btn btn-theme-outline" id="viewResumeButton">View Resume</button>
         </div>
       </div>
     </div>
@@ -693,5 +701,13 @@
 
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAIA_zqjFMsJM_sxP9-6Pde5vVCTyJmUHM&callback=initMap"></script>
   
+  <script>
+    $(document).ready(() => {
+      $("#viewResumeButton").on("click", () => {
+        window.open("assets/documents/BrianMichaelResume.pdf", "_blank");
+      });
+    });
+  </script>
+
 </body>
 </html>
