--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         </div>
       </div>
     </div>
-    <div class="container py-5">
+    <!-- <div class="container py-5">
       <h1 class="text-center fw-normal wow fadeIn">My Skills</h1>
       <div class="row py-3">
         <div class="col-md-6">
@@ -201,40 +201,53 @@
           </div>
         </div>
       </div>
-    </div>
-    <div class="container pt-5">
+    </div> -->
+    <!-- <div class="container pt-5">
       <div class="row">
         <div class="col-md-6 wow fadeInRight">
-          <h2 class="fw-normal">Education</h2>
+          <h2 class="fw-normal">Employment</h2>
           <ul class="timeline mt-4 pr-md-5">
             <li>
-              <div class="title">2010</div>
+              <div class="title">2023</div>
               <div class="details">
-                <h5>Specialize of course</h5>
-                <small class="fg-theme">University of Study</small>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered</p>
+                <h5>Game Development Summer Camp Counselor</h5>
+                <small class="fg-theme">University of Wisconsin-Whitewater Camps and Conferences</small>
+                <ul>
+                  <p></p>
+                  <li>Led informative sessions on game development for both middle and high school campers</li>
+                  <li>Provided personalized guidance to campers and assisting them with their Unity projects</li>
+                  <li>Collaborated with fellow camp staff to coordinate events</li>
+                </ul>
               </div>
             </li>
             <li>
-              <div class="title">2009</div>
+              <div class="title">2023 - Present</div>
               <div class="details">
-                <h5>Specialize of course</h5>
-                <small class="fg-theme">University of Study</small>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered</p>
-              </div>
+                <h5>Web Developer</h5>
+                <small class="fg-theme">University of Wisconsin-Whitewater ResNET</small>
+                <ul>
+                  <p></p>
+                  <li>Demonstrated proficiency in HTML and CSS while maintaining websites</li>
+                  <li>Developed dynamic web applications using PHP and MySQL</li>
+                  <li>Collaborated with others to handle complex web development projects and implement database administration tasks</li>
+                </ul>              </div>
             </li>
             <li>
-              <div class="title">2008</div>
+              <div class="title">2022 - 2023</div>
               <div class="details">
-                <h5>Specialize of course</h5>
-                <small class="fg-theme">University of Study</small>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered</p>
-              </div>
+                <h5>Resident Assistant</h5>
+                <small class="fg-theme">University of Wisconsin-Whitewater Housing</small>
+                <ul>
+                  <p></p>
+                  <li>Created a supportive and inclusive environment in the resident halls</li>
+                  <li>Responded and solved residents' needs on an individual and communal level</li>
+                  <li>Collaborated with staff  as well as leaders inside and out of the complex</li>
+                </ul>              </div>
             </li>
           </ul>
         </div>
         <div class="col-md-6 wow fadeInRight" data-wow-delay="200ms">
-          <h2 class="fw-normal">Experience</h2>
+          <h2 class="fw-normal">Freelance</h2>
           <ul class="timeline mt-4 pr-md-5">
             <li>
               <div class="title">2017 - Current</div>
@@ -263,7 +276,7 @@
           </ul>
         </div>
       </div>
-    </div>
+    </div> -->
   </div>
   
   <div class="vg-page page-service">
