--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
     </div> -->
   </div>
   
-  <div class="vg-page page-service">
+  <!-- <div class="vg-page page-service">
     <div class="container">
       <div class="text-center wow fadeInUp">
         <div class="badge badge-subhead">Service</div>
@@ -332,9 +332,9 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   
-  <div class="vg-page page-funfact" style="background-image: url(assets/img/bg_banner.jpg);">
+  <!-- <div class="vg-page page-funfact" style="background-image: url(assets/img/bg_banner.jpg);">
     <div class="container">
       <div class="row section-counter">
         <div class="col-md-6 col-lg-3 py-4 wow fadeIn">
@@ -355,7 +355,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   
   <!-- Portfolio page -->
   <div class="vg-page page-portfolio" id="portfolio">
@@ -437,7 +437,7 @@
   </div> <!-- End Portfolio page -->
   
   <!-- Testimonial -->
-  <div class="vg-page page-testimonial">
+  <!-- <div class="vg-page page-testimonial">
     <div class="container">
       <h1 class="text-center fw-normal wow fadeInUp">What Clients are Saying</h1>
       <div class="row justify-content-center mt-5 wow fadeInUp">
@@ -493,10 +493,10 @@
         </div>
       </div>
     </div>
-  </div> <!-- End testimonial -->
+  </div> End testimonial -->
   
   <!-- Client -->
-  <div class="vg-page page-client">
+  <!-- <div class="vg-page page-client">
     <div class="container">
       <div class="row">
         <div class="col-md-6 col-lg-4 col-xl-3 item">
@@ -543,10 +543,10 @@
         </div>
       </div>
     </div>
-  </div> <!-- End client -->
+  </div> End client -->
   
   <!-- Blog -->
-  <div class="vg-page page-blog" id="blog">
+  <!-- <div class="vg-page page-blog" id="blog">
     <div class="container">
       <div class="text-center">
         <div class="badge badge-subhead wow fadeInUp">Blog</div>
@@ -594,7 +594,7 @@
         </div>
       </div>
     </div>
-  </div> <!-- End blog -->
+  </div> End blog -->
   
   <!-- Contact -->
   <div class="vg-page page-contact" id="contact">
