--- a/index.html
+++ b/index.html
@@ -360,79 +360,48 @@
   <!-- Portfolio page -->
   <div class="vg-page page-portfolio" id="portfolio">
     <div class="container">
-      <div class="text-center wow fadeInUp">
+      <!-- <div class="text-center wow fadeInUp">
         <div class="badge badge-subhead">Portfolio</div>
-      </div>
-      <h1 class="text-center fw-normal wow fadeInUp">See my work</h1>
+      </div> -->
+      <h1 class="text-center fw-normal wow fadeInUp">Projects</h1>
       <div class="filterable-button py-3 wow fadeInUp" data-toggle="selected">
         <button class="btn btn-theme-outline selected" data-filter="*">All</button>
+        <button class="btn btn-theme-outline" data-filter=".games">Games</button>
         <button class="btn btn-theme-outline" data-filter=".apps">Apps</button>
-        <button class="btn btn-theme-outline" data-filter=".template">Template</button>
+        <!-- <button class="btn btn-theme-outline" data-filter=".template">Template</button>
         <button class="btn btn-theme-outline" data-filter=".ios">IOS</button>
         <button class="btn btn-theme-outline" data-filter=".ui-ux">UI/UX</button>
         <button class="btn btn-theme-outline" data-filter=".graphic">Graphic</button>
-        <button class="btn btn-theme-outline" data-filter=".wireframes">Wireframes</button>
+        <button class="btn btn-theme-outline" data-filter=".wireframes">Wireframes</button> -->
       </div>
 
       <div class="gridder my-3">
+        <div class="grid-item games wow zoomIn">
+          <div class="img-place" data-src="assets/img/work/nosediver.png" data-fancybox data-caption='<h5 class="fg-theme">Nosediver</h5> <p>Initially created for a game jam, Nosediver was my first solo project. I wanted to create something achieveable given my skill-level at the time, so I went with an arcade-style score game. To make things more exciting, I added a customization shop as well as power-ups. Nosediver was made in Unity.</p> <a href="https://zclipse.itch.io/nosediver" target="_blank" class="btn btn-theme">Play</a>'>
+            <img src="assets/img/work/nosediver.png" alt="Nosediver">
+          </div>
+        </div>
+        <div class="grid-item games wow zoomIn">
+          <div class="img-place" data-src="assets/img/work/cowboys_chorus_mdev.jpg" data-fancybox data-caption='<h5 class="fg-theme">Cowboy&#39;s Chorus</h5> <p>Cowboy&#39;s Chorus was exhibited at M+DEV 2023 and was developed for the University of Wisconsin-Whitewater Media Arts and Game Development Expo 2023, my C# final, and a game jam. The idea behind this was to create a game that could be enjoyed regardless of the user&#39;s level of visibility. The game does not require any visuals, however they are there in case someone desires aid. Cowboy&#39;s Chorus was made in Unity.</p> <a href="https://zclipse.itch.io/cowboys-chorus" target="_blank" class="btn btn-theme">Play</a>'>
+            <img src="assets/img/work/cowboys_chorus.png" alt="Cowboy&#39;s Chorus">
+          </div>
+        </div>
         <div class="grid-item apps wow zoomIn">
-          <div class="img-place" data-src="assets/img/work/work-1.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Mobile Travel App</h5> <p>Travel, Discovery</p>">
-            <img src="assets/img/work/work-1.jpg" alt="">
-            <div class="img-caption">
-              <h5 class="fg-theme">Mobile Travel App</h5>
-              <p>Travel, Discovery</p>
-            </div>
+          <div class="img-place" data-src="assets/img/work/motivational_keyboard.png" data-fancybox data-caption='<h5 class="fg-theme">Motivational Keyboard</h5> <p>With the Motivational Keyboard, I created an app as opposed to a video game. As the title suggests, the main purpose of this app was to motivate users to type something, whether that be a late paper or an important email. The Motivational Keyboard is a great tool for focus. This app was made in Unity.</p> <a href="https://zclipse.itch.io/motivational-keyboard" target="_blank" class="btn btn-theme">Play</a>'>
+            <img src="assets/img/work/motivational_keyboard.png" alt="Motivational Keyboard">
           </div>
         </div>
-        <div class="grid-item template wireframes wow zoomIn">
-          <div class="img-place" data-src="assets/img/work/work-2.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Music App</h5> <p>Musics</p>">
-            <img src="assets/img/work/work-2.jpg" alt="">
-            <div class="img-caption">
-              <h5 class="fg-theme">Music App</h5>
-              <p>Musics</p>
-            </div>
+        <div class="grid-item games wow zoomIn">
+          <div class="img-place" data-src="assets/img/work/sno_problem.png" data-fancybox data-caption='<h5 class="fg-theme">S&#39;no Problem</h5> <p>S&#39;no Problem is a project I developed with the goal of putting it on Cool Math Games. The player plays as a penguin who builds snowmen by rolling snowballs that increase in size. Various puzzle elements are gradually introduced, such as a bounce pad and icicles. S&#39;no Problem was made in Unity.</p> <a href="https://zclipse.itch.io/sno-problem" target="_blank" class="btn btn-theme">Play</a>'>
+            <img src="assets/img/work/sno_problem.png" alt="S&#39;no Problem">
           </div>
         </div>
-        <div class="grid-item apps ios wow zoomIn">
-          <div class="img-place" data-src="assets/img/work/work-3.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Gaming Dashboard</h5> <p>Games, Streaming</p>">
-            <img src="assets/img/work/work-3.jpg" alt="">
-            <div class="img-caption">
-              <h5 class="fg-theme">Gaming Dashboard</h5>
-              <p>Games, Streaming</p>
-            </div>
-          </div>
-        </div>
-        <div class="grid-item graphic ui-ux wow zoomIn">
-          <div class="img-place" data-src="assets/img/work/work-4.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Drugs Delivery App</h5> <p>Health, Drugs</p>">
-            <img src="assets/img/work/work-4.jpg" alt="">
-            <div class="img-caption">
-              <h5 class="fg-theme">Drugs Delivery App</h5>
-              <p>Health, Drugs</p>
-            </div>
-          </div>
-        </div>
-        <div class="grid-item apps ios wow zoomIn">
-          <div class="img-place" data-src="assets/img/work/work-5.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Musics Discover</h5> <p>Musics, Dashboard</p>">
-            <img src="assets/img/work/work-5.jpg" alt="">
-            <div class="img-caption">
-              <h5 class="fg-theme">Musics Discover</h5>
-              <p>Musics, Dashboard</p>
-            </div>
-          </div>
-        </div>
-        <div class="grid-item graphic ui-ux wireframes wow zoomIn">
-          <div class="img-place" data-src="assets/img/work/work-6.jpg" data-fancybox data-caption="<h5 class='fg-theme'>Game Streaming</h5> <p>Games, Streaming</p>">
-            <img src="assets/img/work/work-6.jpg" alt="">
-            <div class="img-caption">
-              <h5 class="fg-theme">Game Streaming</h5>
-              <p>Games, Streaming</p>
-            </div>
+        <div class="grid-item apps wow zoomIn">
+          <div class="img-place" data-src="assets/img/work/primis_desk.jpg" data-fancybox data-caption='<h5 class="fg-theme">Primis</h5> <p>During my Freshman and Sophomore years, I was employed at Roberta&#39;s Art Gallery in the University of Wisconsin-Whitewater campus. For each exhibit, we were responsible for installing the art pieces. This included many measurements that would oftentimes result in confusion. As a result of this, I created a program that did all the calculations for us, making work more efficient. Primis was created in Unity.</p> <a href="https://www.uww.edu/news/archive/2023-03-art-gallery-magd-major" target="_blank" class="btn btn-theme">Read Article</a>'>
+            <img src="assets/img/work/primis_art.png" alt="Primis">
           </div>
         </div>
       </div> <!-- End gridder -->
-      <div class="text-center wow fadeInUp">
-        <a href="javascript:void(0)" class="btn btn-theme">Load More</a>
-      </div>
     </div>
   </div> <!-- End Portfolio page -->
   
@@ -718,6 +687,13 @@
     $(document).ready(() => {
       $("#viewResumeButton").on("click", () => {
         window.open("assets/documents/BrianMichaelResume.pdf", "_blank");
+      });
+
+      $("[data-fancybox]").fancybox({
+        buttons: [
+            'close'
+        ],
+        clickContent: false
       });
     });
   </script>
