--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
       <div class="gridder my-3">
         <div class="grid-item games wow zoomIn">
-          <div class="img-place" data-src="assets/img/work/nosediver.png" data-fancybox data-caption='<h5 class="fg-theme">Nosediver</h5> <p>Initially created for a game jam, Nosediver was my first solo project. I wanted to create something achieveable given my skill-level at the time, so I went with an arcade-style score game. To make things more exciting, I added a customization shop as well as power-ups. Nosediver was made in Unity.</p> <a href="https://zclipse.itch.io/nosediver" target="_blank" class="btn btn-theme">Play</a>'>
+          <div class="img-place" data-src="assets/img/work/nosediver.gif" data-fancybox data-caption='<h5 class="fg-theme">Nosediver</h5> <p>Initially created for a game jam, Nosediver was my first solo project. I wanted to create something achieveable given my skill-level at the time, so I went with an arcade-style score game. To make things more exciting, I added a customization shop as well as power-ups. Nosediver was made in Unity.</p> <a href="https://zclipse.itch.io/nosediver" target="_blank" class="btn btn-theme">Play</a>'>
             <img src="assets/img/work/nosediver.png" alt="Nosediver">
           </div>
         </div>
@@ -120,7 +120,7 @@
           </div>
         </div>
         <div class="grid-item games wow zoomIn">
-          <div class="img-place" data-src="assets/img/work/sno_problem.png" data-fancybox data-caption='<h5 class="fg-theme">S&#39;no Problem</h5> <p>S&#39;no Problem is a project I developed with the goal of putting it on Cool Math Games. The player plays as a penguin who builds snowmen by rolling snowballs that increase in size. Various puzzle elements are gradually introduced, such as a bounce pad and icicles. S&#39;no Problem was made in Unity.</p> <a href="https://zclipse.itch.io/sno-problem" target="_blank" class="btn btn-theme">Play</a>'>
+          <div class="img-place" data-src="assets/img/work/sno_problem.gif" data-fancybox data-caption='<h5 class="fg-theme">S&#39;no Problem</h5> <p>S&#39;no Problem is a project I developed with the goal of putting it on Cool Math Games. The player plays as a penguin who builds snowmen by rolling snowballs that increase in size. Various puzzle elements are gradually introduced, such as a bounce pad and icicles. S&#39;no Problem was made in Unity.</p> <a href="https://zclipse.itch.io/sno-problem" target="_blank" class="btn btn-theme">Play</a>'>
             <img src="assets/img/work/sno_problem.png" alt="S&#39;no Problem">
           </div>
         </div>
