resume 4.13.24 itch.io and reordered projects

--- a/index.html
+++ b/index.html
@@ -106,13 +106,8 @@
 
       <div class="gridder my-3">
         <div class="grid-item games wow zoomIn">
-          <div class="img-place" data-src="assets/img/work/nosediver.gif" data-fancybox data-caption='<h5 class="fg-theme">Nosediver</h5> <p>Initially created for a game jam, Nosediver was my first solo project. I wanted to create something achieveable given my skill-level at the time, so I went with an arcade-style score game. To make things more exciting, I added a customization shop as well as power-ups. Nosediver was made in Unity.</p> <a href="https://zclipse.itch.io/nosediver" target="_blank" class="btn btn-theme">Play</a>'>
-            <img src="assets/img/work/nosediver.png" alt="Nosediver">
-          </div>
-        </div>
-        <div class="grid-item games wow zoomIn">
-          <div class="img-place" data-src="assets/img/work/cowboys_chorus_mdev.jpg" data-fancybox data-caption='<h5 class="fg-theme">Cowboy&#39;s Chorus</h5> <p>Cowboy&#39;s Chorus was exhibited at M+DEV 2023 and was developed for the University of Wisconsin-Whitewater Media Arts and Game Development Expo 2023, my C# final, and a game jam. The idea behind this was to create a game that could be enjoyed regardless of the user&#39;s level of visibility. The game does not require any visuals, however they are there in case someone desires aid. Cowboy&#39;s Chorus was made in Unity.</p> <a href="https://zclipse.itch.io/cowboys-chorus" target="_blank" class="btn btn-theme">Play</a>'>
-            <img src="assets/img/work/cowboys_chorus.png" alt="Cowboy&#39;s Chorus">
+          <div class="img-place" data-src="assets/img/work/sno_problem.gif" data-fancybox data-caption='<h5 class="fg-theme">S&#39;no Problem</h5> <p>S&#39;no Problem is a project I developed with the goal of putting it on Cool Math Games. The player plays as a penguin who builds snowmen by rolling snowballs that increase in size. Various puzzle elements are gradually introduced, such as a bounce pad and icicles. S&#39;no Problem was made in Unity.</p> <a href="https://zclipse.itch.io/sno-problem" target="_blank" class="btn btn-theme">Play</a>'>
+            <img src="assets/img/work/sno_problem.png" alt="S&#39;no Problem">
           </div>
         </div>
         <div class="grid-item apps wow zoomIn">
@@ -121,13 +116,18 @@
           </div>
         </div>
         <div class="grid-item games wow zoomIn">
-          <div class="img-place" data-src="assets/img/work/sno_problem.gif" data-fancybox data-caption='<h5 class="fg-theme">S&#39;no Problem</h5> <p>S&#39;no Problem is a project I developed with the goal of putting it on Cool Math Games. The player plays as a penguin who builds snowmen by rolling snowballs that increase in size. Various puzzle elements are gradually introduced, such as a bounce pad and icicles. S&#39;no Problem was made in Unity.</p> <a href="https://zclipse.itch.io/sno-problem" target="_blank" class="btn btn-theme">Play</a>'>
-            <img src="assets/img/work/sno_problem.png" alt="S&#39;no Problem">
+          <div class="img-place" data-src="assets/img/work/cowboys_chorus_mdev.jpg" data-fancybox data-caption='<h5 class="fg-theme">Cowboy&#39;s Chorus</h5> <p>Cowboy&#39;s Chorus was exhibited at M+DEV 2023 and was developed for the University of Wisconsin-Whitewater Media Arts and Game Development Expo 2023, my C# final, and a game jam. The idea behind this was to create a game that could be enjoyed regardless of the user&#39;s level of visibility. The game does not require any visuals, however they are there in case someone desires aid. Cowboy&#39;s Chorus was made in Unity.</p> <a href="https://zclipse.itch.io/cowboys-chorus" target="_blank" class="btn btn-theme">Play</a>'>
+            <img src="assets/img/work/cowboys_chorus.png" alt="Cowboy&#39;s Chorus">
           </div>
         </div>
         <div class="grid-item apps wow zoomIn">
           <div class="img-place" data-src="assets/img/work/primis_desk.jpg" data-fancybox data-caption='<h5 class="fg-theme">Primis</h5> <p>During my Freshman and Sophomore years, I was employed at Roberta&#39;s Art Gallery in the University of Wisconsin-Whitewater campus. For each exhibit, we were responsible for installing the art pieces. This included many measurements that would oftentimes result in confusion. As a result of this, I created a program that did all the calculations for us, making work more efficient. Primis was created in Unity.</p> <a href="https://www.uww.edu/news/archive/2023-03-art-gallery-magd-major" target="_blank" class="btn btn-theme">Read Article</a>'>
             <img src="assets/img/work/primis_art.png" alt="Primis">
+          </div>
+        </div>
+        <div class="grid-item games wow zoomIn">
+          <div class="img-place" data-src="assets/img/work/nosediver.gif" data-fancybox data-caption='<h5 class="fg-theme">Nosediver</h5> <p>Initially created for a game jam, Nosediver was my first solo project. I wanted to create something achieveable given my skill-level at the time, so I went with an arcade-style score game. To make things more exciting, I added a customization shop as well as power-ups. Nosediver was made in Unity.</p> <a href="https://zclipse.itch.io/nosediver" target="_blank" class="btn btn-theme">Play</a>'>
+            <img src="assets/img/work/nosediver.png" alt="Nosediver">
           </div>
         </div>
       </div> <!-- End gridder -->
@@ -146,7 +146,7 @@
             <ul class="list-unstyled">
               <li><a href="https://www.linkedin.com/in/brian-michael-97346622a/" target="_blank">LinkedIn</a></li>
               <li><a href="https://github.com/ZclipseCode" target="_blank">GitHub</a></li>
-              <li><a href="https://zclipse.itch.io/" target="_blank">Itch</a></li>
+              <li><a href="https://zclipse.itch.io/" target="_blank">Itch.io</a></li>
             </ul>
           </div>
         </div>
