double down update

--- a/index.html
+++ b/index.html
@@ -110,6 +110,11 @@
             <img src="assets/img/work/sno_problem.png" alt="S&#39;no Problem">
           </div>
         </div>
+        <div class="grid-item games wow zoomIn">
+          <div class="img-place" data-src="assets/img/work/double_down.png" data-fancybox data-caption='<h5 class="fg-theme">Double Down</h5> <p>Created for my portfolio class, Double Down is a cooperative minigame compilation in which two players must race against the clock to complete challenges. Players can either play a gauntlet mode (rapid-fire minigames one after another) or free play mode (choose which minigame to be played). Double Down was made in Unity.</p> <a href="https://zclipse.itch.io/double-down" target="_blank" class="btn btn-theme">Play</a>'>
+            <img src="assets/img/work/double_down.png" alt="Double Down">
+          </div>
+        </div>
         <div class="grid-item apps wow zoomIn">
           <div class="img-place" data-src="assets/img/work/motivational_keyboard.png" data-fancybox data-caption='<h5 class="fg-theme">Motivational Keyboard</h5> <p>With the Motivational Keyboard, I created an app as opposed to a video game. As the title suggests, the main purpose of this app was to motivate users to type something, whether that be a late paper or an important email. The Motivational Keyboard is a great tool for focus. This app was made in Unity.</p> <a href="https://zclipse.itch.io/motivational-keyboard" target="_blank" class="btn btn-theme">Play</a>'>
             <img src="assets/img/work/motivational_keyboard.png" alt="Motivational Keyboard">
