--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="col-lg-6 offset-lg-1 wow fadeInRight">
           <h1 class="fw-light">Brian Michael</h1>
           <h5 class="fg-theme mb-3">Game Developer</h5>
-          <p class="text-muted">Hello! I'm a game developer. I've been creating games for a couple years now, and I'd have to choose Unity as my engine of choice. I'm currently attending the University of Wisconsin-Whitewater and persuing my Bachelor of Science. I primarily do the programming side of game development.</p>
+          <p class="text-muted">Hello! I&#39;m Brian, a game developer who has been passionate about programming since childhood.<br>Currently, I am the president of the University of Wisconsin-Whitewater&#39;s Game and Media Entertainment Developers (GAMED) student organization. In this organization, we hold weekly meetings to grow our skills in game development. We are always looking for speakers to learn from!<br>My primary programming language is C# and my game engine of choice is Unity. I have branched out a bit, however- honing my skills in web development and IT.<br>Thanks for checking out my portfolio! Stay cool out there. 😎</p>
           <div style="display: flex; justify-content: space-between; margin-bottom: 20px;">
             <img class="skill" src="assets/img/unity.png" alt="Unity">
             <img class="skill" src="assets/img/csharp.png" alt="C#">
