--- a/index.html
+++ b/index.html
@@ -80,13 +80,14 @@
           <h5 class="fg-theme mb-3">Game Developer</h5>
           <p class="text-muted">Hello! I'm a game developer. I've been creating games for a couple years now, and I'd have to choose Unity as my engine of choice. I'm currently attending the University of Wisconsin-Whitewater and persuing my Bachelor of Science. I primarily do the programming side of game development.</p>
           <div style="display: flex; justify-content: space-between; margin-bottom: 20px;">
-            <img class="skill" src="assets/img/unity.png" alt="Unity">
             <img class="skill" src="assets/img/csharp.png" alt="C#">
-            <img class="skill" src="assets/img/cpp.png" alt="C++">
+            <img class="skill" src="assets/img/unity.png" alt="Unity">
+            <img class="skill" src="assets/img/visual_studio.png" alt="Visual Studio">
+            <img class="skill" src="assets/img/github.png" alt="GitHub">
             <img class="skill" src="assets/img/python.png" alt="Python">
-            <img class="skill" src="assets/img/html.png" alt="HTML">
             <img class="skill" src="assets/img/javascript.png" alt="JavaScript">
-            <img class="skill" src="assets/img/jquery.png" alt="jQuery">
+            <img class="skill" src="assets/img/unreal.png" alt="Unreal Engine">
+            <img class="skill" src="assets/img/cpp.png" alt="C++">
           </div>
           <button class="btn btn-theme-outline" id="viewResumeButton">View Resume</button>
         </div>
